# rlm-harness

./: .gitignore  AGENTS.md  EVALS.md  README.md  pyproject.toml  setup.py
docker/: sandbox.Dockerfile
docs/plans/: production-grade-harness-revamp.md  rlm-first-pivot.md
rlm_harness/: __init__.py  cli.py  cli_catalog.py  config.py  dogfood.py  extension_cli.py  learning_cli.py  maintenance_cli.py  mcp_cli.py  mcp_client.py  mcp_config.py  memory_cli.py  model_client.py  observability.py  onboarding_cli.py  parser_cli.py  project_style.py  provider_cli.py  providers.py  quality_cli.py  readiness.py  runtime_cli.py  sandbox_cli.py  shell_cli.py  surface_cli.py  task_cli.py  task_runtime.py  taste_cli.py  trace_cli.py  tracing.py  types.py
rlm_harness/actions/: __init__.py  base.py
rlm_harness/agents/: __init__.py  typed_actions.py
rlm_harness/context/: __init__.py  budget.py  manifest.py  store.py  variable.py
rlm_harness/evals/: __init__.py  langsmith.py  long_horizon.py  runner.py  suite.py  swebench.py
rlm_harness/graph/: __init__.py  budget.py  build.py  checkpoint.py  grounded_answers.py  nodes.py  planning.py  recovery.py  task_policy.py  verification.py
rlm_harness/kernel/: __init__.py  events.py  run.py  state.py  supervisor.py
rlm_harness/memory/: __init__.py  audit.py  embed.py  evolution.py  feedback.py  paging.py  profile.py  schema.sql  store.py
rlm_harness/model_server/: __init__.py  client.py  server.py
scripts/: install.sh
tests/: test_cli_config.py  test_cli_trim.py  test_context_long_context_gate.py  test_context_manifest.py  test_context_store.py  test_context_variable.py  test_default_supervisor_backend.py  test_doctor.py  test_dogfood.py  test_dogfood_release.py  test_evals.py  test_evals_long.py  test_graph.py  test_install_smoke.py  test_kernel_contracts.py  test_kernel_supervisor.py  test_kernel_supervisor_paging.py  test_langsmith_integration.py  test_memory.py  test_memory_audit.py  test_model_client.py  test_model_client_stream.py  test_model_server.py  test_one_tool_protocol.py  test_readiness.py  test_rlm_runtime.py  test_rlm_runtime_manifest.py  test_rlm_runtime_stream.py  test_sandbox.py  test_streaming_ux.py  test_supervisor_runner.py  test_supervisor_verification.py  test_tool_executor.py  test_tool_registry.py  test_trace_cli_show_replay.py  test_tracing.py  test_tracing_migration.py  test_tracing_tree.py  test_verification_policy.py
(+19 files in other folders)
