[project]
name = "rlm-harness"
version = "0.1.0"
description = "A trace-first RLM coding agent harness."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
graph = ["langgraph>=0.2"]
mlx = ["mlx-lm"]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
rlm-harness = "rlm_harness.cli:main"

[tool.setuptools.packages.find]
include = ["rlm_harness*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP045"]

[tool.ruff.format]
quote-style = "double"
