[project]
name = "rlm-harness"
version = "0.1.0"
description = "A local recursive coding-agent harness with a clean CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "sqlite-vec>=0.1",
]

[project.optional-dependencies]
graph = ["langgraph>=0.2", "langgraph-checkpoint-sqlite>=3.1"]
memory = [
  "sentence-transformers>=3",
]
mlx = ["mlx-lm"]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
harness = "rlm_harness.cli:main"
rlm-harness = "rlm_harness.cli:main"

[tool.setuptools.packages.find]
include = ["rlm_harness*"]

[tool.setuptools.package-data]
rlm_harness = ["memory/schema.sql"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP045"]

[tool.ruff.format]
quote-style = "double"
